this is devun, made changes to the swagger api, followed same format as user route but implemented uniform code for the orders route. Provide validation in middleware, self configured my .env file, and lastly added to index.js file my connection to the route.
