# backend/routes/index.js
@@ -8,6 +8,7 @@ const passport = require('passport');
 //});
 router.use("/reviews", require("./reviews"));
 router.use("/users", require("./users"));
+router.use("/orders", require("./orders"));
 router.use('/api-docs', require('./swagger'));
 
 //login/logout
